--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Yellow - links page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable=no>
+  <meta name="description" content="مصنوعه بمواد عضويه وفاخره  تعمل بشكل بارز في تحسين البشره  منتجات عنايه بالبشره يمنية">
+  <meta name="keywords" content="منتجات العناية بالبشرة، عناية بالبشرة الطبيعية، مواد عضوية للعناية بالبشرة، منتجات طبيعية للبشرة، منتجات فاخرة للعناية بالبشرة، Lali Beauty، Lali Beauty للعناية بالبشرة، منتجات Lali Beauty، Lali Beauty منتجات يمنية، Lali Beauty منتجات عضوية، Lali Beauty العناية بالبشرة، لالي ، لالي بيوتي">
+  <meta name="author" content="Lali Beauty لالي بيوتي">
   <link rel="icon" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
@@ -20,8 +24,9 @@
 <body>
   
     <header>
-  <img class="img" src="logo.svg" alt="Logo"> <!-- ضع رابط الشعار هنا -->
-  <h1><img class="img-2" src="logo-2.svg" alt="Logo"></h1>
+  <img class="img" src="logo2.svg" alt="Logo">
+  <img class="img-2" src="logo3.svg" alt="Logo"> <!-- ضع رابط الشعار هنا -->
+  
 </header>
   <div class="container">
     <h1 class="color">صفحة الروابط</h1>
